Allow using pretrained or current stardist model in StarDistDestector

--- a/docs/source/run_examples/Detectors.ipynb
+++ b/docs/source/run_examples/Detectors.ipynb
@@ -155,10 +155,9 @@
     "# You can also use the min_area to filter more or less spots given their area\n",
     "\n",
     "K_SPEED = 0.01\n",
-    "scale = 1\n",
+    "scale = detector.scale\n",
     "\n",
     "i = 0\n",
-    "detector = WaveletDetector(scale=scale, k=3.0, min_area=3.0, device=torch.device(\"cpu\"))\n",
     "\n",
     "while True:\n",
     "    frame = video[i]\n",
@@ -214,11 +213,18 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Detections (Wavelet): 100%|███████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 50/50 [00:02<00:00, 17.99it/s]\n"
-     ]
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "bd213a395a80453dbb5fab593d102557",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Detections (Wavelet):   0%|          | 0/50 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -248,10 +254,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-09-02 16:28:06.147572: I tensorflow/core/util/port.cc:110] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
-      "2023-09-02 16:28:06.178625: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "2024-02-21 23:58:42.915650: I tensorflow/core/util/port.cc:110] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
+      "2024-02-21 23:58:42.942898: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
       "To enable the following instructions: AVX2 AVX512F AVX512_VNNI FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2023-09-02 16:28:06.674761: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
+      "2024-02-21 23:58:43.359533: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
      ]
     }
    ],
@@ -268,16 +274,6 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "stardist.py (41): Current implementation do not support batch size greater than 1 and will iterate image by image\n",
-      "2023-09-02 16:28:11.441460: I tensorflow/compiler/xla/stream_executor/cuda/cuda_gpu_executor.cc:996] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero. See more at https://github.com/torvalds/linux/blob/v6.0/Documentation/ABI/testing/sysfs-bus-pci#L344-L355\n",
-      "2023-09-02 16:28:11.441738: W tensorflow/core/common_runtime/gpu/gpu_device.cc:1956] Cannot dlopen some GPU libraries. Please make sure the missing libraries mentioned above are installed properly if you would like to use GPU. Follow the guide at https://www.tensorflow.org/install/gpu for how to download and setup the required libraries for your platform.\n",
-      "Skipping registering GPU devices...\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
@@ -285,16 +281,33 @@
       "Loading thresholds from 'thresholds.json'.\n",
       "Using default values: prob_thresh=0.710898, nms_thresh=0.3.\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024-02-21 23:58:51.621874: I tensorflow/compiler/xla/stream_executor/cuda/cuda_gpu_executor.cc:996] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero. See more at https://github.com/torvalds/linux/blob/v6.0/Documentation/ABI/testing/sysfs-bus-pci#L344-L355\n",
+      "2024-02-21 23:58:51.622159: W tensorflow/core/common_runtime/gpu/gpu_device.cc:1956] Cannot dlopen some GPU libraries. Please make sure the missing libraries mentioned above are installed properly if you would like to use GPU. Follow the guide at https://www.tensorflow.org/install/gpu for how to download and setup the required libraries for your platform.\n",
+      "Skipping registering GPU devices...\n"
+     ]
     }
    ],
    "source": [
-    "# Create the detector object from a trained model. Note that the training should be done with\n",
-    "# the official implementation (https://github.com/stardist/stardist).\n",
-    "# Hyperparameters are set during the training phase (nms_treshold and prob_threshold)\n",
+    "# Use your active stardist model, or load a trained own or pretrained own from the official implementation:\n",
+    "# Hyperparameters are usually set during the training phase (nms_treshold and prob_threshold)\n",
     "# They can be changed manually (See next cells)\n",
     "\n",
-    "model_path = \"path/to/trained/model/\"\n",
-    "detector = StarDistDetector(model_path, batch_size=5)"
+    "# From a current model:\n",
+    "# detector = StarDistDetector(stardist_model, batch_size=1)\n",
+    "\n",
+    "# Load a pretrained model with a valid id\n",
+    "# detector = StarDistDetector.from_pretrained(\"2D_versatile_fluo\", batch_size=1)\n",
+    "\n",
+    "# Create the detector object from a trained model. Note that the training should be done with\n",
+    "# the official implementation (https://github.com/stardist/stardist).\n",
+    "train_dir = \"path/to/trained/model/\"\n",
+    "\n",
+    "detector = StarDistDetector.from_trained(train_dir, batch_size=1)"
    ]
   },
   {
@@ -302,17 +315,7 @@
    "execution_count": 11,
    "id": "fd1b8e15",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loading network weights from 'weights_best.h5'.\n",
-      "Loading thresholds from 'thresholds.json'.\n",
-      "Using default values: prob_thresh=0.710898, nms_thresh=0.3.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Set the hyperparameters manually on the video\n",
     "# Use w/x to move backward/forward in the video\n",
@@ -324,7 +327,6 @@
     "nms_speed = 0.2\n",
     "\n",
     "i = 0\n",
-    "detector = StarDistDetector(model_path, batch_size=5)\n",
     "\n",
     "while True:\n",
     "    frame = video[i]\n",
@@ -377,11 +379,18 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Detections (StarDist): 100%|██████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 50/50 [00:15<00:00,  3.16it/s]\n"
-     ]
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "e125a9d3ee794e78a48c025ea72e9f93",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Detections (StarDist):   0%|          | 0/50 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
