--- a/examples/Detectors.ipynb
+++ b/examples/Detectors.ipynb
@@ -28,6 +28,7 @@
     "import torch\n",
     "\n",
     "import byotrack\n",
+    "import byotrack.visualize\n",
     "\n",
     "TEST = True  # Set to False to analyze a whole video"
    ]
@@ -135,10 +136,9 @@
     "# You can also use the min_area to filter more or less spots given their area\n",
     "\n",
     "K_SPEED = 0.01\n",
-    "scale = 1\n",
+    "scale = detector.scale\n",
     "\n",
     "i = 0\n",
-    "detector = WaveletDetector(scale=scale, k=3.0, min_area=3.0, device=torch.device(\"cpu\"))\n",
     "\n",
     "while True:\n",
     "    frame = video[i]\n",
@@ -229,13 +229,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create the detector object from a trained model. Note that the training should be done with\n",
-    "# the official implementation (https://github.com/stardist/stardist).\n",
-    "# Hyperparameters are set during the training phase (nms_treshold and prob_threshold)\n",
+    "# Use your active stardist model, or load a trained own or pretrained own from the official implementation:\n",
+    "# Hyperparameters are usually set during the training phase (nms_treshold and prob_threshold)\n",
     "# They can be changed manually (See next cells)\n",
     "\n",
-    "model_path = \"path/to/trained/model/\"\n",
-    "detector = StarDistDetector(model_path, batch_size=5)"
+    "# From a current model:\n",
+    "# detector = StarDistDetector(stardist_model, batch_size=1)\n",
+    "\n",
+    "# Load a pretrained model with a valid id\n",
+    "# detector = StarDistDetector.from_pretrained(\"2D_versatile_fluo\", batch_size=1)\n",
+    "\n",
+    "# Create the detector object from a trained model. Note that the training should be done with\n",
+    "# the official implementation (https://github.com/stardist/stardist).\n",
+    "train_dir = \"path/to/trained/model/\"\n",
+    "\n",
+    "detector = StarDistDetector.from_trained(train_dir, batch_size=1)"
    ]
   },
   {
@@ -255,7 +263,6 @@
     "nms_speed = 0.2\n",
     "\n",
     "i = 0\n",
-    "detector = StarDistDetector(model_path, batch_size=5)\n",
     "\n",
     "while True:\n",
     "    frame = video[i]\n",
