Add time projection visualization
Able to project all tracks positions (for all frames) into a single image

--- a/examples/ByoTrack fundamental.ipynb
+++ b/examples/ByoTrack fundamental.ipynb
@@ -162,7 +162,6 @@
     "# Use v to switch on/off the display of the video\n",
     "# Use d to switch detection display mode (None, mask, segmentation)\n",
     "\n",
-    "\n",
     "byotrack.visualize.InteractiveVisualizer(video, detections_sequence).run()"
    ]
   },
@@ -238,14 +237,20 @@
     "# This Linker requires to install Icy software first\n",
     "\n",
     "icy_path = \"path/to/icy/icy.jar\"\n",
-    "motion = Motion.BROWNIAN  # Already by default. Can also be DIRECTED or MULTI (both)\n",
+    "motion = Motion.MULTI  # Can also be DIRECTED or MULTI (both)\n",
     "\n",
-    "if True:  # You can choose to set manually the parameters. See EMHTParameters?\n",
-    "    parameters = EMHTParameters(gate_factor=5.0, motion=motion)\n",
+    "if True:  # Set full specs with EMHTParameters\n",
+    "    # You can choose to set manually the parameters. See EMHTParameters\n",
+    "    # the more important ones are:\n",
+    "    # - gate_factor: How greedy the linking is. (Default to 4.0)\n",
+    "    # - motion: Motion model to consider: Can be BROWNIAN, DIRECTED or MULTI. (Default is BROWNIAN)\n",
+    "    # - tree_depth: MHT tree depth. Higher values are usually more performant, but much more expensive\n",
+    "    #             If the tracking is too slow or too ram intensive, you may reduce this value. (Default 4)\n",
+    "    parameters = EMHTParameters(gate_factor=4.0, motion=motion, tree_depth=2)\n",
     "    linker = IcyEMHTLinker(icy_path, parameters)\n",
-    "else:\n",
+    "else:  # Do not provide specs, parameters will be estimated by Icy\n",
     "    linker = IcyEMHTLinker(icy_path)\n",
-    "    linker.motion = motion  # Set motion afterwards is no parameters are provided"
+    "    linker.motion = motion  # Set motion afterwards if no parameters are provided"
    ]
   },
   {
@@ -272,7 +277,36 @@
    "source": [
     "# Visualize track lifetime\n",
     "\n",
+    "# Each track is in white when it alive. (Track on x-axis, time on y-axis)\n",
+    "\n",
     "byotrack.visualize.display_lifetime(tracks)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dd5ccefa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Project tracks onto a single image and color by time\n",
+    "\n",
+    "# Create a list of colors for each time frame\n",
+    "# From cyan (start of the video) to red (end of the video)\n",
+    "\n",
+    "hsv = mpl.colormaps[\"hsv\"]\n",
+    "colors = [tuple(int(c * 255) for c in hsv(0.5 + 0.5 * k / (len(detections_sequence) - 1))[:3]) for k in range(len(detections_sequence))]\n",
+    "\n",
+    "visu = byotrack.visualize.temporal_projection(\n",
+    "    byotrack.Track.tensorize(tracks),\n",
+    "    colors=colors,\n",
+    "    background=video[0],\n",
+    "    color_by_time=True\n",
+    ")\n",
+    "\n",
+    "plt.figure(figsize=(24, 16))\n",
+    "plt.imshow(visu)\n",
+    "plt.show()"
    ]
   },
   {
@@ -389,7 +423,7 @@
     "# Then the tracker\n",
     "\n",
     "detector = WaveletDetector(scale=1, k=3, min_area=3.0, batch_size=20, device=torch.device(\"cpu\"))\n",
-    "linker = IcyEMHTLinker(icy_path)\n",
+    "linker = IcyEMHTLinker(icy_path, EMHTParameters(gate_factor=4.0, motion=motion, tree_depth=2))\n",
     "\n",
     "# Optional refiner\n",
     "refiners = []\n",
@@ -422,6 +456,30 @@
     "# Visualize track lifetime\n",
     "\n",
     "byotrack.visualize.display_lifetime(tracks)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0e8e080f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Project tracks onto a single image and color by track\n",
+    "\n",
+    "# Create a list of colors for each track (if more tracks than colors, it will cycle through it)\n",
+    "\n",
+    "hsv = mpl.colormaps[\"hsv\"]\n",
+    "colors = [tuple(int(c * 255) for c in hsv(k / 199)[:3]) for k in range(200)]\n",
+    "\n",
+    "visu = byotrack.visualize.temporal_projection(\n",
+    "    byotrack.Track.tensorize(tracks),\n",
+    "    colors=colors,\n",
+    ")\n",
+    "\n",
+    "plt.figure(figsize=(24, 16))\n",
+    "plt.imshow(visu)\n",
+    "plt.show()"
    ]
   },
   {
@@ -504,10 +562,10 @@
    "source": [
     "# Save tracks in ByoTrack format (compressed in a torch tensor)\n",
     "\n",
-    "byotrack.Track.save(tracks, \"tracks.pth\")\n",
+    "byotrack.Track.save(tracks, \"tracks.pt\")\n",
     "\n",
     "# Can be reload with\n",
-    "tracks = byotrack.Track.load(\"tracks.pth\")"
+    "tracks = byotrack.Track.load(\"tracks.pt\")"
    ]
   },
   {
