Add optical flow to byotrack
Support for opencv and scikit image.

Currently it is only used for tracks propagation (for interpolation or stitching),
but it can be used (and soon will be used) for the linking task

--- a/examples/Detectors.ipynb
+++ b/examples/Detectors.ipynb
@@ -28,9 +28,7 @@
     "import torch\n",
     "\n",
     "import byotrack\n",
-    "import byotrack.visualize\n",
-    "\n",
-    "TEST = True  # Set to False to analyze a whole video"
+    "import byotrack.visualize"
    ]
   },
   {
@@ -57,6 +55,19 @@
     "# fps = video.reader.fps\n",
     "\n",
     "# Note: video could also be a 4 dimensionnal numpy array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "14ad295e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "TEST = True  # Set to False to analyze a whole video\n",
+    "\n",
+    "if TEST:\n",
+    "    video = video[:50]  # Temporal slicing to analyze only the first 50 frames"
    ]
   },
   {
@@ -196,10 +207,7 @@
    "source": [
     "# Run the detection process on the current video\n",
     "\n",
-    "if TEST:  # Use slicing on video to run detection only on a part of it\n",
-    "    detections_sequence = detector.run(video[:50])\n",
-    "else:\n",
-    "    detections_sequence = detector.run(video)"
+    "detections_sequence = detector.run(video)"
    ]
   },
   {
@@ -317,10 +325,7 @@
    "source": [
     "# Run the detection process on the current video\n",
     "\n",
-    "if TEST:  # Use slicing on video to run detection only on a part of it\n",
-    "    detections_sequence = detector.run(video[:50])\n",
-    "else:\n",
-    "    detections_sequence = detector.run(video)"
+    "detections_sequence = detector.run(video)"
    ]
   },
   {
