--- a/examples/ByoTrack fundamental.ipynb
+++ b/examples/ByoTrack fundamental.ipynb
@@ -22,10 +22,7 @@
     "import torch\n",
     "\n",
     "import byotrack\n",
-    "import byotrack.visualize\n",
-    "\n",
-    "\n",
-    "TEST = True  # Set to False to analyze a whole video"
+    "import byotrack.visualize"
    ]
   },
   {
@@ -52,6 +49,19 @@
     "# fps = video.reader.fps\n",
     "\n",
     "# Note: video could also be a 4 dimensionnal numpy array loaded manually"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "12d2ed41",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "TEST = True  # Set to False to analyze a whole video\n",
+    "\n",
+    "if TEST:\n",
+    "    video = video[:50]  # Temporal slicing to analyze only the first 50 frames"
    ]
   },
   {
@@ -127,10 +137,7 @@
    "source": [
     "# Run the detection process on the current video\n",
     "\n",
-    "if TEST:  # Use slicing on video to run detection only on a part of it\n",
-    "    detections_sequence = detector.run(video[:50])\n",
-    "else:\n",
-    "    detections_sequence = detector.run(video)"
+    "detections_sequence = detector.run(video)"
    ]
   },
   {
@@ -260,12 +267,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Run the linker given a video (Unused) and detections\n",
+    "# Run the linker given a video (Unused for icy_emht) and detections\n",
     "\n",
-    "if TEST:  # Use slicing to run linker only on a part of the data\n",
-    "    tracks = linker.run(video, detections_sequence[:50])\n",
-    "else:\n",
-    "    tracks = linker.run(video, detections_sequence)"
+    "tracks = linker.run(video, detections_sequence)"
    ]
   },
   {
@@ -440,10 +444,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if TEST:  # Use slicing on video to run tracker only on a part of it\n",
-    "    tracks = tracker.run(video[:50])\n",
-    "else:\n",
-    "    tracks = tracker.run(video)"
+    "tracks = tracker.run(video)"
    ]
   },
   {
@@ -527,10 +528,10 @@
     "\n",
     "# Note that you can add this refiner to your MultiStepTracker pipeline\n",
     "\n",
-    "method = \"constant\"  # tps / constant\n",
+    "method = \"tps\"  # tps / constant / flow (You need to provided a valid byotrack.OpticalFlow then)\n",
     "full = False  # Extrapolate position of the tracks on the all frame range and not just for the track lifespan\n",
     "\n",
-    "tracks = ForwardBackwardInterpolater(method, full=False).run(video, tracks)"
+    "tracks = ForwardBackwardInterpolater(method, full).run(video, tracks)"
    ]
   },
   {
