Add Video and Linkers notebooks

--- a/examples/Detectors.ipynb
+++ b/examples/Detectors.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Detectors\n",
     "\n",
-    "Review of all the detectors implemented in ByoTrack\n",
+    "Review of all the detectors implemented in ByoTrack. For more details, have a look at the documentation or implementation of each detector.\n",
     "___________________________________________________\n",
     "\n",
     "1. **Wavelet Detector** (Wavelet decomposition + noise filtering)\n",
@@ -28,6 +28,7 @@
     "import torch\n",
     "\n",
     "import byotrack\n",
+    "import byotrack.example_data\n",
     "import byotrack.visualize"
    ]
   },
@@ -46,15 +47,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "video_path = \"path/to/video.ext\"\n",
+    "# Open an example video\n",
+    "video = byotrack.example_data.hydra_neurons()\n",
     "\n",
-    "# Simply open a video\n",
-    "video = byotrack.Video(video_path)\n",
+    "# Or provide a path to one of your video\n",
+    "# video = byotrack.Video(\"path/to/video.ext\")\n",
     "\n",
-    "fps = 20\n",
-    "# fps = video.reader.fps\n",
-    "\n",
-    "# Note: video could also be a 4 dimensionnal numpy array"
+    "# Or load manually a video as a numpy array\n",
+    "# video = np.random.randn(50, 500, 500, 3)  # T, H, W, C"
    ]
   },
   {
@@ -79,7 +79,9 @@
    "source": [
     "# A transform can be added to normalize and aggregate channels\n",
     "\n",
-    "transform_config = byotrack.VideoTransformConfig(aggregate=True, normalize=True, q_min=0.02, q_max=0.995, smooth_clip=1.0)\n",
+    "transform_config = byotrack.VideoTransformConfig(\n",
+    "    aggregate=True, normalize=True, q_min=0.01, q_max=0.999, smooth_clip=1.0\n",
+    ")\n",
     "video.set_transform(transform_config)\n",
     "\n",
     "# Show the min max value used to clip and normalize\n",
@@ -115,7 +117,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from byotrack.implementation.detector.wavelet import WaveletDetector\n",
+    "from byotrack.implementation.detector.wavelet import WaveletDetector"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "24dc7975",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# See the Detector documentation\n",
     "\n",
     "WaveletDetector?"
    ]
@@ -130,7 +142,7 @@
     "# Create the detector object with its hyper parameters. \n",
     "# The most important ones being the scale (size of the spots) and k the threshold noise\n",
     "\n",
-    "detector = WaveletDetector(scale=1, k=3.0, min_area=3.0, batch_size=20, device=torch.device(\"cpu\"))"
+    "detector = WaveletDetector(scale=1, k=3.0, min_area=5.0, batch_size=20, device=torch.device(\"cpu\"))"
    ]
   },
   {
@@ -225,7 +237,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from byotrack.implementation.detector.stardist import StarDistDetector\n",
+    "from byotrack.implementation.detector.stardist import StarDistDetector"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e0a29e84",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# See the Detector documentation\n",
     "\n",
     "StarDistDetector?"
    ]
