--- a/examples/ByoTrack fundamental.ipynb
+++ b/examples/ByoTrack fundamental.ipynb
@@ -22,6 +22,7 @@
     "import torch\n",
     "\n",
     "import byotrack\n",
+    "import byotrack.example_data\n",
     "import byotrack.visualize"
    ]
   },
@@ -40,15 +41,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "video_path = \"path/to/video.ext\"\n",
+    "# Open an example video\n",
+    "video = byotrack.example_data.hydra_neurons()[130:]  # Let's start at frame 130 where the animal is contracting\n",
     "\n",
-    "# Simply open a video\n",
-    "video = byotrack.Video(video_path)\n",
+    "# Or provide a path to one of your video\n",
+    "# video = byotrack.Video(\"path/to/video.ext\")\n",
     "\n",
-    "fps = 20\n",
-    "# fps = video.reader.fps\n",
-    "\n",
-    "# Note: video could also be a 4 dimensionnal numpy array loaded manually"
+    "# Or load manually a video as a numpy array\n",
+    "# video = np.random.randn(50, 500, 500, 3)  # T, H, W, C"
    ]
   },
   {
@@ -71,9 +71,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# For video only (With numpy arrays, your are responsible for channels aggregation and normalization)\n",
     "# A transform can be added to normalize and aggregate channels\n",
     "\n",
-    "transform_config = byotrack.VideoTransformConfig(aggregate=True, normalize=True, q_min=0.01, q_max=0.995, smooth_clip=1.0)\n",
+    "transform_config = byotrack.VideoTransformConfig(\n",
+    "    aggregate=True, normalize=True, q_min=0.01, q_max=0.999, smooth_clip=1.0\n",
+    ")\n",
     "video.set_transform(transform_config)\n",
     "\n",
     "# Show the min max value used to clip and normalize\n",
@@ -97,12 +100,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "689677a9",
+   "id": "10299129",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Visualization\n",
+    "# Display the video with opencv\n",
     "# Use w/x to move forward in time (or space to run/pause the video)\n",
+    "# Use v to switch on/off0 the display of the video\n",
     "\n",
     "byotrack.visualize.InteractiveVisualizer(video).run()"
    ]
@@ -125,7 +129,7 @@
     "# Create the detector object with its hyper parameters\n",
     "from byotrack.implementation.detector.wavelet import WaveletDetector\n",
     "\n",
-    "detector = WaveletDetector(scale=1, k=3.0, min_area=3.0, batch_size=20, device=torch.device(\"cpu\"))"
+    "detector = WaveletDetector(scale=1, k=3.0, min_area=5.0, batch_size=20, device=torch.device(\"cpu\"))"
    ]
   },
   {
@@ -187,7 +191,7 @@
     "K_SPEED = 0.01\n",
     "\n",
     "i = 0\n",
-    "detector = WaveletDetector(scale=1, k=3.0, min_area=3.0, device=torch.device(\"cpu\"))\n",
+    "detector = WaveletDetector(scale=1, k=3.0, min_area=5.0, device=torch.device(\"cpu\"))\n",
     "\n",
     "while True:\n",
     "    frame = video[i]\n",
@@ -228,7 +232,7 @@
    "id": "5b1264d7",
    "metadata": {},
    "source": [
-    "## Link detections: Example of IcyEMHTLinker"
+    "## Link detections: Example of KOFTLinker (Kalman and Optical Flow Tracking)"
    ]
   },
   {
@@ -238,26 +242,45 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from byotrack.implementation.linker.icy_emht import IcyEMHTLinker, Motion, EMHTParameters\n",
+    "# KOFT requires Optical Flow. We give here the example of Farneback from Open-CV.\n",
     "\n",
-    "# Create the linker object with icy path\n",
-    "# This Linker requires to install Icy software first\n",
+    "from byotrack.implementation.linker.frame_by_frame.koft import KOFTLinker, KOFTLinkerParameters\n",
+    "from byotrack.implementation.optical_flow.opencv import OpenCVOpticalFlow\n",
     "\n",
-    "icy_path = \"path/to/icy/icy.jar\"\n",
-    "motion = Motion.MULTI  # Can also be DIRECTED or MULTI (both)\n",
+    "# Prepare the optical flow algorithm\n",
+    "optflow = OpenCVOpticalFlow(cv2.FarnebackOpticalFlow_create(winSize=20), downscale=4)\n",
     "\n",
-    "if True:  # Set full specs with EMHTParameters\n",
-    "    # You can choose to set manually the parameters. See EMHTParameters\n",
-    "    # the more important ones are:\n",
-    "    # - gate_factor: How greedy the linking is. (Default to 4.0)\n",
-    "    # - motion: Motion model to consider: Can be BROWNIAN, DIRECTED or MULTI. (Default is BROWNIAN)\n",
-    "    # - tree_depth: MHT tree depth. Higher values are usually more performant, but much more expensive\n",
-    "    #             If the tracking is too slow or too ram intensive, you may reduce this value. (Default 4)\n",
-    "    parameters = EMHTParameters(gate_factor=4.0, motion=motion, tree_depth=2)\n",
-    "    linker = IcyEMHTLinker(icy_path, parameters)\n",
-    "else:  # Do not provide specs, parameters will be estimated by Icy\n",
-    "    linker = IcyEMHTLinker(icy_path)\n",
-    "    linker.motion = motion  # Set motion afterwards if no parameters are provided"
+    "# Create the linker\n",
+    "# You can look at the documentation (KOFTLinkerParameters?) to see what parameters are available\n",
+    "\n",
+    "specs = KOFTLinkerParameters(\n",
+    "    association_threshold=2e-3,  # Most important parameter: don't link if the association likelihood is smaller than 1e-3.\n",
+    "    detection_std=3.0,  # Detections location are precise up to 3.0 pixels (Usually ~ size of spots)\n",
+    "    process_std=1.5,  # Kalman filter predictions are precise up to 1.5 pixels\n",
+    "    flow_std=1.0,  # Optical flow predictions are precise up to 1.0 pixels/frame\n",
+    "    kalman_order=1,  # Order of the kalman filter (Model up to 1st derivatives of positions)\n",
+    "    n_gap=5,  # Allow to link after 5 consecutive missed detections\n",
+    "    cost=\"likelihood\",  # See koft.Cost? to see which other cost are available, by default it uses Euclidean distance (And association threshod should be express in pixels)\n",
+    ")\n",
+    "\n",
+    "linker = KOFTLinker(specs, optflow)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1da01d99",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Before linking, let's check visually that the optical flow algorithm works\n",
+    "# We sample a grid of points that are moved by the flow computed.\n",
+    "# The computed flows are good if the points roughly follows the video motion\n",
+    "\n",
+    "# Use w/x to move forward in time (or space to run/pause the video)\n",
+    "# Use g to reset the grid of points\n",
+    "\n",
+    "byotrack.visualize.InteractiveFlowVisualizer(video, optflow).run()"
    ]
   },
   {
@@ -267,7 +290,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Run the linker given a video (Unused for icy_emht) and detections\n",
+    "# Run the linker given a video and detections\n",
     "\n",
     "tracks = linker.run(video, detections_sequence)"
    ]
@@ -344,6 +367,7 @@
    "outputs": [],
    "source": [
     "from byotrack.implementation.refiner.cleaner import Cleaner\n",
+    "from byotrack.implementation.refiner.interpolater import ForwardBackwardInterpolater\n",
     "from byotrack.implementation.refiner.stitching import EMC2Stitcher"
    ]
   },
@@ -354,10 +378,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Split tracks with consecutive dist > 3.5\n",
+    "# Split tracks with consecutive dist > 5. Splitting may be counterproductive, check the tracks before applying such cleaner.\n",
     "# Drop tracks with length < 5\n",
     "\n",
-    "cleaner = Cleaner(min_length=5, max_dist=3.5)\n",
+    "cleaner = Cleaner(min_length=5, max_dist=5.)\n",
     "tracks = cleaner.run(video, tracks)"
    ]
   },
@@ -399,11 +423,67 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "573906b0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# After EMC2 stitching, NaN values can be inside merged tracks.\n",
+    "# It can be filled with interpolation between known positions\n",
+    "\n",
+    "method = \"tps\"  # tps / constant / flow (You need to provided a valid byotrack.OpticalFlow then)\n",
+    "full = False  # Extrapolate position of the tracks on the all frame range and not just for the track lifespan\n",
+    "\n",
+    "interpolater = ForwardBackwardInterpolater(method, full)\n",
+    "tracks = interpolater.run(video, tracks)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "290d14a0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Visualize track lifetime\n",
+    "\n",
+    "byotrack.visualize.display_lifetime(tracks)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8250a08f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Project tracks onto a single image and color by time\n",
+    "\n",
+    "# Create a list of colors for each time frame\n",
+    "# From cyan (start of the video) to red (end of the video)\n",
+    "\n",
+    "hsv = mpl.colormaps[\"hsv\"]\n",
+    "colors = [tuple(int(c * 255) for c in hsv(0.5 + 0.5 * k / (len(detections_sequence) - 1))[:3]) for k in range(len(detections_sequence))]\n",
+    "\n",
+    "visu = byotrack.visualize.temporal_projection(\n",
+    "    byotrack.Track.tensorize(tracks),\n",
+    "    colors=colors,\n",
+    "    background=video[0],\n",
+    "    color_by_time=True\n",
+    ")\n",
+    "\n",
+    "plt.figure(figsize=(24, 16))\n",
+    "plt.imshow(visu)\n",
+    "plt.show()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "fd59009a",
    "metadata": {},
    "source": [
-    "## End-to-end tracking: Example of MultiStepTracker"
+    "## End-to-end tracking - Online or Offline tracking"
    ]
   },
   {
@@ -413,7 +493,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from byotrack import MultiStepTracker"
+    "from byotrack import BatchMultiStepTracker, MultiStepTracker"
    ]
   },
   {
@@ -423,18 +503,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create all the steps: Detector, Linker[, Refiner]\n",
-    "# Then the tracker\n",
+    "# Create a full tracking pipeline from detector, linker and refiners\n",
+    "# If you have a BatchDetector and a OnlineLinker (True for WaveletDetector and KOFTLinker)\n",
+    "# You may use BatchMultiStepTracker that will process online the video (never keeping all the segmentations in RAM)\n",
+    "# Otherwise, use MultiStepTracker (Run Detections, then linking)\n",
     "\n",
-    "detector = WaveletDetector(scale=1, k=3, min_area=3.0, batch_size=20, device=torch.device(\"cpu\"))\n",
-    "linker = IcyEMHTLinker(icy_path, EMHTParameters(gate_factor=4.0, motion=motion, tree_depth=2))\n",
-    "\n",
-    "# Optional refiner\n",
-    "refiners = []\n",
-    "if True:\n",
-    "    refiners = [Cleaner(5, 3.5), EMC2Stitcher(eta=5.0)]\n",
-    "\n",
-    "tracker = MultiStepTracker(detector, linker, refiners)"
+    "tracker = BatchMultiStepTracker(detector, linker, (cleaner, stitcher, interpolater))\n",
+    "# tracker = MultiStepTracker(detector, linker, (cleaner, stitcher, interpolater))"
    ]
   },
   {
@@ -496,54 +571,6 @@
     "# Use d to switch detection display mode (None, mask, segmentation)\n",
     "\n",
     "byotrack.visualize.InteractiveVisualizer(video, detections_sequence, tracks).run()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "7c7fb4c5",
-   "metadata": {},
-   "source": [
-    "## Postprocessing: Fill NaN with interpolated values"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "46b7b62d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from byotrack.implementation.refiner.interpolater import ForwardBackwardInterpolater"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "53e11f07",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# After EMC2 stitching, NaN values can be inside merged tracks.\n",
-    "# It can be filled with interpolation between known positions\n",
-    "\n",
-    "# Note that you can add this refiner to your MultiStepTracker pipeline\n",
-    "\n",
-    "method = \"tps\"  # tps / constant / flow (You need to provided a valid byotrack.OpticalFlow then)\n",
-    "full = False  # Extrapolate position of the tracks on the all frame range and not just for the track lifespan\n",
-    "\n",
-    "tracks = ForwardBackwardInterpolater(method, full).run(video, tracks)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3daa43b7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Visualize track lifetime\n",
-    "\n",
-    "byotrack.visualize.display_lifetime(tracks)"
    ]
   },
   {
