Add merge_id to the track data structure and fix a tracks loading bug
It will allow to have two tracks that merges into one, in some future usage (Cell Linking ?)

Found and fix a loading bug: the previous track load did not support nan values inside the track segment...

Improved a bit the doc

--- a/examples/ByoTrack fundamental.ipynb
+++ b/examples/ByoTrack fundamental.ipynb
@@ -251,14 +251,14 @@
     "optflow = OpenCVOpticalFlow(cv2.FarnebackOpticalFlow_create(winSize=20), downscale=4)\n",
     "\n",
     "# Create the linker\n",
-    "# You can look at the documentation (KOFTLinkerParameters?) to see what parameters are available\n",
+    "# Look at the documentation (KOFTLinkerParameters?) to see what parameters are available and their full descriptions\n",
     "\n",
     "specs = KOFTLinkerParameters(\n",
-    "    association_threshold=2e-3,  # Most important parameter: don't link if the association likelihood is smaller than 1e-3.\n",
+    "    association_threshold=1e-3,  # Most important parameter: don't link if the association likelihood is smaller than 1e-3.\n",
     "    detection_std=3.0,  # Detections location are precise up to 3.0 pixels (Usually ~ size of spots)\n",
-    "    process_std=1.5,  # Kalman filter predictions are precise up to 1.5 pixels\n",
+    "    process_std=1.5,  # Kalman filter predictions are precise up to 1.5 pixels (Usually ~ size of unmodeled displacement)\n",
     "    flow_std=1.0,  # Optical flow predictions are precise up to 1.0 pixels/frame\n",
-    "    kalman_order=1,  # Order of the kalman filter (Model up to 1st derivatives of positions)\n",
+    "    kalman_order=1,  # Order of the kalman filter (1: Directed, 2: Accelerated, ...)\n",
     "    n_gap=5,  # Allow to link after 5 consecutive missed detections\n",
     "    cost=\"likelihood\",  # See koft.Cost? to see which other cost are available, by default it uses Euclidean distance (And association threshod should be express in pixels)\n",
     ")\n",
