--- a/examples/Linkers.ipynb
+++ b/examples/Linkers.ipynb
@@ -217,11 +217,11 @@
    "outputs": [],
    "source": [
     "# Create the linker\n",
-    "# We set only the main parameters\n",
-    "# You can look at the documentation to see the other ones\n",
+    "# We set only the main parameters.\n",
+    "# You can look at the documentation to see the other parameters and more complete descriptions.\n",
     "\n",
     "specs = NearestNeighborParameters(\n",
-    "    association_threshold=10.0,  # Most important one: Don't link if the euclidean distance is greater than 10 pixels\n",
+    "    association_threshold=10.0,  # Most important parameter: don't link if the euclidean distance is larger than 10 pixels\n",
     "    n_valid=3,  # Validate a track after three consecutive detections\n",
     "    n_gap=3,  # At most 3 consecutive missed detections\n",
     "    association_method=\"opt_smooth\"  # See AssociationMethod?, you can use greedy which is faster but usually less performant\n",
@@ -335,13 +335,13 @@
    "source": [
     "# Create the linker\n",
     "# We set only the main parameters.\n",
-    "# You can look at the documentation to see the other ones.\n",
+    "# You can look at the documentation to see the other parameters and more complete descriptions.\n",
     "\n",
     "specs = KalmanLinkerParameters(\n",
-    "    association_threshold=1e-3,  # Most important parameter: don't link if the association likelihood is smaller than 1e-4.\n",
-    "    detection_std=3.0,  # Detections location are precise up to 3.0 pixels\n",
-    "    process_std=3.0,  # Kalman filter predictions are precise up to 3.0 pixels\n",
-    "    kalman_order=1,  # Order of the kalman filter\n",
+    "    association_threshold=1e-3,  # Most important parameter: don't link if the association likelihood is smaller than 1e-3.\n",
+    "    detection_std=3.0,  # Detections location are precise up to 3.0 pixels (Usually ~ size of spots)\n",
+    "    process_std=1.5,  # Kalman filter predictions are precise up to 1.5 pixels (Usually ~ size of unmodeled displacement)\n",
+    "    kalman_order=1,  # Order of the kalman filter (0: Brownian, 1: Directed, 2: Accelerated, ...)\n",
     "    cost=\"likelihood\",  # See Cost? to see which other cost are available, by default it uses Euclidean distance (And association threshod should be express in pixels)\n",
     ")\n",
     "\n",
@@ -488,14 +488,14 @@
    "source": [
     "# Create the linker\n",
     "# We set only the main parameters.\n",
-    "# You can look at the documentation to see the other ones.\n",
+    "# You can look at the documentation to see the other parameters and more complete descriptions.\n",
     "\n",
     "specs = KOFTLinkerParameters(\n",
-    "    association_threshold=2e-3,  # Most important parameter: don't link if the association likelihood is smaller than 1e-3.\n",
-    "    detection_std=3.0,  # Detections location are precise up to 3.0 pixels\n",
-    "    process_std=1.5,  # Kalman filter predictions are precise up to 3.0 pixels\n",
+    "    association_threshold=1e-3,  # Most important parameter: don't link if the association likelihood is smaller than 1e-3.\n",
+    "    detection_std=3.0,  # Detections location are precise up to 3.0 pixels (Usually ~ size of spots)\n",
+    "    process_std=1.5,  # Kalman filter predictions are precise up to 1.5 pixels (Usually ~ size of unmodeled displacement)\n",
     "    flow_std=1.0,  # Optical flow predictions are precise up to 1.0 pixels/frame\n",
-    "    kalman_order=1,  # Order of the kalman filter\n",
+    "    kalman_order=1,  # Order of the kalman filter (1: Directed, 2: Accelerated, ...)\n",
     "    n_gap=5,  # Allow to link after 5 consecutive missed detections\n",
     "    cost=\"likelihood\",  # See Cost? to see which other cost are available, by default it uses Euclidean distance (And association threshod should be express in pixels)\n",
     ")\n",
@@ -615,7 +615,7 @@
     "motion = Motion.MULTI  # Can also be DIRECTED or MULTI (both)\n",
     "\n",
     "if True:  # Set full specs with EMHTParameters\n",
-    "    # You can choose to set manually the parameters. See EMHTParameters\n",
+    "    # You can choose to set manually the parameters. See EMHTParameters?\n",
     "    # the more important ones are:\n",
     "    # - gate_factor: How greedy the linking is. (Default to 4.0) more or less equivalent to the association_threshold\n",
     "    #       of KalmanLinker with a Mahalanobis Cost.\n",
@@ -738,7 +738,7 @@
     "# Create the linker object with fiji path\n",
     "# This Linker requires to install Fiji software first\n",
     "# We set only the main parameters.\n",
-    "# You can look at the documentation to see the other ones.\n",
+    "# You can look at the documentation to see the other parameters and more complete descriptions.\n",
     "\n",
     "fiji_path = \"path/to/Fiji.app/ImageJ-os\"\n",
     "\n",
