API fully supports 3D
Most of Byotrack was already 3D friendly except the detections part.

1. Detections can be 3D with 3D positions, bbox or segmentations.
2. The documentation has a consistent nomenclature about the axis (in the API part at least)
3. Batch detector and Batch tracker do not use np.concatenate which will be too slow for stacking 3D frames

--- a/examples/ByoTrack fundamental.ipynb
+++ b/examples/ByoTrack fundamental.ipynb
@@ -106,7 +106,7 @@
    "source": [
     "# Display the video with opencv\n",
     "# Use w/x to move forward in time (or space to run/pause the video)\n",
-    "# Use v to switch on/off0 the display of the video\n",
+    "# Use v to switch on/off the display of the video\n",
     "\n",
     "byotrack.visualize.InteractiveVisualizer(video).run()"
    ]
